# behavior_take_off2

./: CMakeLists.txt  README.md  README_en.md  behavior_catalog.yaml  package.xml  simulated_quadrotor_basic2.sh
launch/: behavior_take_off2.launch
src/include/: behavior_take_off2.h
src/source/: behavior_take_off2.cpp  behavior_take_off2_main.cpp
